objects/SMAX_PS_HSI_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>SMAX HSI Settings</label>
    <fields>
        <fullName>SMAX_PS_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Country_Code__c</fullName>
        <label>Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Product_Line__c</fullName>
        <externalId>true</externalId>
        <label>Product Line</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>